[workspace]
members = [
    "rushstr", # binary crate
    "rushstr-core", # core logic as a library
    "rushstr-tui", # optional TUI interface logic
]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
uuid = { version = "1.16.0", features = ["v4"] }