[package]
name = "rushstr-core"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fuzzy-matcher.workspace = true
regex.workspace = true
sha2.workspace = true
sled.workspace = true
bincode.workspace = true

[dev-dependencies]
temp-env.workspace = true
serial_test.workspace = true
