[package]
name = "rushstr-core"
version = "1.2.5"
edition = "2024"
description = "An interactive, Rust-powered shell history search tool inspired by hstr"
license = "MIT"
repository = "https://github.com/donhk/rushstr"
documentation = "https://github.com/donhk/rushstr"
homepage = "https://github.com/donhk/rushstr"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fuzzy-matcher.workspace = true
regex.workspace = true
sha2.workspace = true
sled.workspace = true
bincode.workspace = true

[dev-dependencies]
temp-env.workspace = true
serial_test.workspace = true
