[package]
name = "rushstr-tui"
version = "1.4.1"
edition = "2024"
description = "An interactive, Rust-powered shell history search tool inspired by hstr"
license = "MIT"
repository = "https://github.com/donhk/rushstr"
documentation = "https://github.com/donhk/rushstr"
homepage = "https://github.com/donhk/rushstr"

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
anyhow.workspace = true
arboard.workspace = true
base64.workspace = true
rushstr-core = { path = "../rushstr-core", version = "1.4.1" }
