[package]
name = "rushstr"
version = "1.2.2"
edition = "2024"
description = "An interactive, Rust-powered shell history search tool inspired by hstr"
license = "MIT"
repository = "https://github.com/donhk/rushstr"
documentation = "https://github.com/donhk/rushstr"
homepage = "https://github.com/donhk/rushstr"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rushstr-core = { path = "../rushstr-core", version = "1.2.2" }
rushstr-tui = { path = "../rushstr-tui", version = "1.2.2" }
